<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/scroll" android:background="@drawable/bg_wood" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="horizontal" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip">
            <EditText android:textSize="17.0sp" android:textStyle="bold" android:id="@id/edit_name" android:nextFocusRight="@id/edit_secondName" android:nextFocusDown="@id/edit_secondName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/place_name" android:singleLine="true" android:layout_weight="1.5" />
            <EditText android:textSize="17.0sp" android:textStyle="bold" android:id="@id/edit_secondName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:hint="@string/place_secondName" android:singleLine="true" android:layout_weight="2.0" />
        </LinearLayout>
        
        <TextView android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/enter_place_hint" />
        <EditText android:textSize="17.0sp" android:id="@id/edit_address1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="0.0dip" android:hint="@string/street_addr" android:singleLine="true" />
        <LinearLayout android:orientation="horizontal" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip">
            <EditText android:textSize="17.0sp" android:id="@id/edit_city" android:nextFocusRight="@id/edit_state" android:nextFocusDown="@id/edit_state" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/city" android:singleLine="true" android:layout_weight="1.5" />
            <EditText android:textSize="17.0sp" android:id="@id/edit_state" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:hint="@string/state" android:singleLine="true" android:layout_weight="2.0" />
        </LinearLayout>
        <TextView android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/drag_pin_hint" />
        <FrameLayout android:layout_gravity="center_horizontal" android:padding="0.0dip" android:clipChildren="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
            <com.google.android.maps.MapView android:layout_gravity="center" android:id="@id/mapview" android:clickable="true" android:layout_width="294.0dip" android:layout_height="136.0dip" android:layout_centerInParent="true" android:apiKey="@string/google_maps_key" />
            <ImageView android:layout_gravity="center" android:layout_width="294.0dip" android:layout_height="136.0dip" android:src="@drawable/place_map_frame" />
        </FrameLayout>
        <LinearLayout android:orientation="horizontal" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip">
            <Button android:textSize="17.0sp" android:textStyle="bold" android:textColor="#ff181919" android:id="@id/btn_skip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/skip" android:layout_weight="1.0" />
            <Button android:textSize="17.0sp" android:textStyle="bold" android:textColor="#ff181919" android:id="@id/btn_add" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/btn_add_place_text" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
