<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@id/edit_login_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:hint="@string/email_addr" android:singleLine="true" android:layout_alignParentTop="true" android:inputType="textEmailAddress" />
    <EditText android:id="@id/edit_login_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/password" android:password="true" android:singleLine="true" android:layout_below="@id/edit_login_email" android:imeOptions="actionGo" />
    <Button style="@style/BocaiButton" android:id="@id/btn_submit_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/submit_login_button" android:layout_below="@id/edit_login_password" />
</RelativeLayout>
