<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ViewFlipper android:layout_gravity="top" android:id="@id/stream_map_group" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="40.0dip" android:layout_marginBottom="50.0dip">
        <FrameLayout android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.google.android.maps.MapView android:layout_gravity="center" android:id="@id/mapview" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:apiKey="@string/google_maps_key" />
            <Button android:textSize="14.0sp" android:textStyle="bold" android:layout_gravity="bottom|center" android:id="@id/btn_scan" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" android:layout_marginBottom="6.0dip" android:text="@string/scan_hint"/>
        </FrameLayout>
        <FrameLayout android:gravity="center_vertical" android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="321.0dip">
            <com.bocai.view.StreamView android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/streamView" android:paddingLeft="10.0dip" android:paddingRight="4.0dip" android:persistentDrawingCache="all" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="2.0dip" />
            <TextView android:layout_gravity="center" android:id="@android:id/empty" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/browse_no_results" style="@style/EmptyListView" />
        </FrameLayout>
    </ViewFlipper>
    <View android:layout_gravity="top" android:background="@drawable/nav_bar_shadow_1x10" android:layout_width="fill_parent" android:layout_height="10.0px" android:layout_marginTop="39.0dip" />
    
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
    	<LinearLayout android:orientation="horizontal" android:id="@id/search_bar" android:background="@drawable/nav_bar_tile_1x46"  android:paddingLeft="10.0dip" android:paddingTop="6.0dip" android:paddingRight="10.0dip" android:paddingBottom="12.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        	<EditText android:ellipsize="end" android:id="@id/search" android:background="@drawable/textfield_search" android:paddingLeft="8.0dip" android:paddingRight="6.0dip" android:layout_width="0.0dip" android:layout_height="34.0dip" android:hint="@string/browse_search_hint" android:singleLine="true" android:capitalize="words" android:drawablePadding="2.0dip" android:layout_weight="1.0" android:inputType="textCapWords" android:imeOptions="actionSearch" />
        	<ImageButton android:id="@id/search_go_btn" android:background="@drawable/btn_search_dialog" android:layout_width="wrap_content" android:layout_height="34.0dip" android:src="@drawable/ic_search_gray" android:scaleType="center" />
    	</LinearLayout>

     	<ListView
     	    android:id="@id/list_hint"
			android:layout_width="fill_parent"
     	    android:layout_height="78.0dip"
     	    android:layout_below="@id/search_bar"
     	    android:layout_centerHorizontal="true"
     	    android:layout_marginTop="-9.0dip"
     	    android:background="#ffffffff"
     	    android:drawSelectorOnTop="true"
     	    android:scrollingCache="true" >
     	    </ListView>

   		<View android:background="@drawable/nav_bar_shadow_1x10" android:layout_width="fill_parent" android:layout_height="10.0px" android:layout_marginTop="-9.0dip" android:layout_below="@id/search_bar" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    
    <RadioGroup android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/filter_modes" android:background="@null" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="@dimen/filterbar_height" android:checkedButton="@id/filter_nearest">
        <RadioButton android:id="@id/filter_nearest" android:background="@drawable/filter_button_3options" android:text="@string/Nearest" style="@style/FilterButton" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/nav_divider_1x40" />
        <RadioButton android:id="@id/filter_latest"  android:background="@drawable/filter_button_3options" android:text="@string/Latest" style="@style/FilterButton" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/nav_divider_1x40" />
        <RadioButton android:id="@id/filter_best"  android:background="@drawable/filter_button_3options" android:text="@string/Best" style="@style/FilterButton" />
    </RadioGroup>
    <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:ellipsize="end" android:gravity="left|center" android:layout_gravity="bottom|left|center" android:id="@id/label_search" android:background="@drawable/browse_footer_gradient" android:paddingLeft="10.0dip" android:paddingRight="31.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginBottom="20.0dip" android:maxLines="1" android:text="@string/find_and_share"/>
    <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:ellipsize="marquee" android:gravity="left|center" android:layout_gravity="bottom|left|center" android:id="@id/label_location" android:background="#ff0c0804" android:paddingLeft="10.0dip" android:paddingRight="35.0dip" android:layout_width="fill_parent" android:layout_height="20.0dip" android:singleLine="true" android:drawableLeft="@drawable/locate_13x13" android:drawablePadding="7.0dip" android:text="@string/nearby"/>
    <ImageButton android:gravity="center" android:layout_gravity="bottom" android:id="@id/btn_refresh" android:background="@null" android:layout_width="32.0dip" android:layout_height="32.0dip" android:src="@null" />
    <ImageButton android:gravity="center" android:layout_gravity="bottom|right|center" android:id="@id/btn_dismiss" android:background="@null" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:src="@drawable/dismiss" />
</FrameLayout>
